# van-child-safety

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/: sdkconfig.main.defaults  sdkconfig.main.espnow.defaults  sdkconfig.main.gpio.defaults
.github/workflows/: ci.yml
discord_relay/: .env.example  Dockerfile  README.md  docker-compose.yml  relay.py  requirements-test.txt  requirements.txt
discord_relay/tests/: conftest.py  test_disarm_command.py  test_discord_sender.py  test_ha_package.py  test_relay_metrics.py  test_relay_rules.py
docs/: CONFIGURATION.md  FLASHING.md  HARDWARE.md  HOME_ASSISTANT.md  MQTT.md  SAFETY.md  SETUP.md
hardware/: LICENSE  README.md
hardware/enclosure/: README.md  bottom.step  bottom.stl  top.step  top.stl
homeassistant/: bus_child_home_zone_blueprint.yaml  bus_project_package.yaml  dashboard.yaml
ignition_remote/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  beacon_config.c  beacon_config.h  ble_scanner.c  ble_scanner.h  bus_mqtt.h  bus_state.c  bus_state.h  co2_tracker.c  co2_tracker.h  common.h  i2c_bus.c  i2c_bus.h  idf_component.yml  ignition.h  ignition_espnow.c  ignition_espnow_protocol.h  ignition_gpio.c  main.c  mqtt_client.c  notifications.c  notifications.h  ntp_sync.c  ntp_sync.h  ota_server.c  ota_server.h  secrets.h.example  sensor_gps.c  sensor_gps.h  sensor_ld2412.c  sensor_ld2412.h  sensor_scd4x.c  sensor_scd4x.h  sensor_sht4x.c  sensor_sht4x.h  util.h  wifi.c  wifi.h  wireguard.c  (+1 more)
test_runs/: README.md  SANITIZATION.md
(+160 files in other folders)
